# Autonomous-Vehicle-Control-with-RL

./: .gitignore  README.md  create_env.py  main.py  pyproject.toml  requirements.txt
logs/: evaluation_results.csv
logs/DQN_1/: events.out.tfevents.1766939424.YASSER.18692.0
logs/DQN_2/: events.out.tfevents.1766956048.YASSER.13308.0
logs/DQN_3/: events.out.tfevents.1766956954.YASSER.17884.0
logs/DQN_4/: events.out.tfevents.1766958055.YASSER.20772.0
logs/DQN_5/: events.out.tfevents.1766958257.YASSER.12684.0
main/: create_sumo_network.py  simulate.py  train_dql.py  train_ql.py
models/: q_table.pkl  q_table_100.pkl  q_table_150.pkl  q_table_200.pkl  q_table_250.pkl  q_table_300.pkl  q_table_350.pkl  q_table_400.pkl  q_table_450.pkl  q_table_50.pkl  q_table_final.pkl
runs/3m9t4z96/DQN_1/: events.out.tfevents.1767042485.YASSER.21496.0
runs/DQN/y0iiob77/DQN_1/: events.out.tfevents.1767130324.YASSER.3320.0
runs/QL/b1i4kqv0/: events.out.tfevents.1767129929.YASSER.3648.0
runs/gl3apt1l/DQN_1/: events.out.tfevents.1767008693.YASSER.6288.0
runs/tzn90s66/DQN_1/: events.out.tfevents.1767038018.YASSER.11332.0
src/: create_sumo_network.py  drl_agent.py  env.py  environment.py  gym_environment.py  q_learning.py  simulate.py  train_dql.py  train_ql.py  utils.py
sumo_env/: highway.edg.xml  highway.net.xml  highway.nod.xml  highway.rou.xml  highway.sumocfg
