[project]
name = "autonomous-vehicle-control-with-rl"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "shimmy>=0.2.1",
    "stable-baselines3>=2.7.1",
    "sumolib>=1.25.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "traci>=1.25.0",
]
